--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
 
   <!-- AndroidIDE -->
+  <item name="copy" type="string" tools:override="true">Copy</item>
+  <item name="text_to_search" type="string">Text to search</item>
   <string name="app_name" translatable="false">AndroidIDE</string>
   <string name="license_jdk">AndroidIDE uses a modified build of the JDK which is licensed under the GNU General Public License v2.0. The source code and the license of the JDK is available at : </string>
   <string name="title_open_source_licenses">Open source licenses</string>
@@ -27,10 +29,10 @@
   <string name="reset">Reset</string>
   <string name="app_logs">App Logs</string>
   <string name="ide_logs">IDE Logs</string>
-  <string name="label_splash_image">Splash image</string>
-  <string name="get_started">Get started</string>
 
   <!-- LSP, Diagnostics & Completions -->
+  <string name="label_splash_image">Splash image</string>
+  <string name="get_started">Get started</string>
   <string name="msg_cannot_perform_fix">Unable to perform quick fix</string>
   <string name="msg_performing_actions">Performing code action…</string>
   <string name="msg_api_info_since">Since API %d</string>
@@ -39,19 +41,19 @@
   <string name="msg_finding_references">Finding references…</string>
   <string name="msg_finding_definition">Finding definition…</string>
   <string name="msg_no_definition">Definition not found</string>
-  <string name="msg_no_references">No references found</string>
-  <string name="view_diags">Diagnostics</string>
 
   <!-- Build Tools Installation -->
+  <string name="msg_no_references">No references found</string>
+  <string name="view_diags">Diagnostics</string>
   <string name="title_installation_failed">Installation failed</string>
   <string name="get_ready_for_something_awesome">Get ready for something awesome !</string>
   <string name="msg_picked_isnt_dir">Picked file is not a directory!</string>
   <string name="msg_pick_single_file">Please choose only one directory</string>
   <string name="please_wait">Please wait for a moment …</string>
-  <string name="title_device_not_supported">Device Not Supported</string>
-  <string name="msg_device_not_supported">Unfortunately, your device is not supported at the moment. We are sorry for the inconvenience.\n\nSupported CPU ABIs: aarch64 and armeabi-v7a</string>
 
   <!-- Project Builder -->
+  <string name="title_device_not_supported">Device Not Supported</string>
+  <string name="msg_device_not_supported">Unfortunately, your device is not supported at the moment. We are sorry for the inconvenience.\n\nSupported CPU ABIs: aarch64 and armeabi-v7a</string>
   <string name="lint">Lint</string>
   <string name="lint_debug" translatable="false">lintDebug</string>
   <string name="lint_release" translatable="false">lintRelease</string>
@@ -75,10 +77,10 @@
   <string name="title_clear_output">Clear output</string>
   <string name="run">Run</string>
   <string name="gradle" translatable="false">Gradle</string>
-  <string name="title_first_build">First Build</string>
-  <string name="msg_first_build">This is the first time build after you installed AndroidIDE. First build usually takes time as Gradle downloads all dependencies and plugins. This process may take about 10–15 minutes. But this totally depends on your network connection.\n\nPlease be patient …</string>
 
   <!-- Project -->
+  <string name="title_first_build">First Build</string>
+  <string name="msg_first_build">This is the first time build after you installed AndroidIDE. First build usually takes time as Gradle downloads all dependencies and plugins. This process may take about 10–15 minutes. But this totally depends on your network connection.\n\nPlease be patient …</string>
   <string name="create_project">Create project</string>
   <string name="minimum_sdk">Minimum SDK</string>
   <string name="target_sdk">Target SDK</string>
@@ -94,10 +96,10 @@
   <string name="msg_create_new_project">Create new project</string>
   <string name="msg_open_existing_project">Open existing project</string>
   <string name="title_confirm_project_close">Close project</string>
-  <string name="msg_confirm_project_close">Are you sure you want to close this project? All started Gradle daemons will be stopped after this project is closed.</string>
-  <string name="project_exists">A project with same name already exists!</string>
 
   <!-- Templates -->
+  <string name="msg_confirm_project_close">Are you sure you want to close this project? All started Gradle daemons will be stopped after this project is closed.</string>
+  <string name="project_exists">A project with same name already exists!</string>
   <string name="template_basic">Basic Project</string>
   <string name="template_description_basic">A basic project with AppCompat Toolbar and a Floating Action Button</string>
   <string name="template_description_empty">An empty project with default toolbar. Suitable when you want to do all the basic things yourself.</string>
@@ -117,10 +119,10 @@
   <string name="template_cpp_description">Creates a new project with an Empty Activity configured to use JNI</string>
   <string name="template_no_activity">No Activity</string>
   <string name="template_no_activity_description">Creates a new project without activity</string>
-  <string name="template_no_AndroidX">NoAndroidX</string>
-  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
 
   <!-- Files -->
+  <string name="template_no_AndroidX">NoAndroidX</string>
+  <string name="template_description_noAndroidX">Creates a new project without AndroidX library</string>
   <string name="save">Save</string>
   <string name="menu_find">Find</string>
   <string name="menu_find_file">Find in file</string>
@@ -187,15 +189,13 @@
   <string name="msg_checking_storage_permissions">Checking storage permissions</string>
   <string name="msg_failed_list_files">Failed to list project files!</string>
   <string name="msg_storage_denied">Can\'t proceed without storage permissions</string>
+
+  <!-- Code Editor -->
   <string name="msg_storage_granted">Storage permissions granted!</string>
   <string name="open_with">Open with...</string>
 
-  <!-- Code Editor -->
   <string name="undo">Undo</string>
   <string name="redo">Redo</string>
-
-  <item name="copy" type="string" tools:override="true">Copy</item>
-  <item name="text_to_search" type="string">Text to search</item>
 
   <!-- Preferences -->
   <string name="title_change_text_size">Editor font size</string>
@@ -542,4 +542,5 @@
   <string name="idepref_java_diagnosticsEnabled_summary">(EXPERIMENTAL) Whether the Java source files should be analyzed for errors or not.</string>
   <string name="title_reload_color_schemes">Reload color schemes</string>
   <string name="msg_dir_picker_failed">Failed to start directory picker : %1$s</string>
+  <string name="msg_tooling_server_unavailable">Tooling API server is unavailable. Check build output and IDE logs for errors.</string>
 </resources>
