--- a/resources/src/main/res/values-hi/strings.xml
+++ b/resources/src/main/res/values-hi/strings.xml
@@ -45,14 +45,11 @@
   <!-- Project Builder -->
   <string name="title_device_not_supported">डिवाइस समर्थित नहीं है</string>
   <string name="msg_device_not_supported">दुर्भाग्य से, आपका डिवाइस इस समय समर्थित नहीं है। असुविधा के लिए हमें खेद है.\n\nसमर्थित CPU ABIs: aarch64 और armeabi-v7a</string>
-  <string name="lint">लिंट</string>
   <string name="build">बिल्ड</string>
   <string name="build_output">बिल्ड आउटपुट</string>
   <string name="lint_tasks">लिंट टास्क्स</string>
   <string name="clean_amp_build">क्लीन &amp; बिल्ड</string>
   <string name="clean_project">क्लीन</string>
-  <string name="create_aab">एएबी बनाएं</string>
-  <string name="build_tasks">बिल्ड टास्क्स</string>
   <string name="quick_run_debug">क्विक रन</string>
   <string name="msg_sync_needed">ग्रेडल फ़ाइलें बदल गई हैं। डिपेंडेंसी और कॉन्फ़िगरेशन्स को सिंक करने के लिए कृपया अपनी प्रोजेक्ट का पुनर्निर्माण करें।</string>
   <string name="preparing">तैयार कर रहे हैं</string>
@@ -206,7 +203,7 @@
   <string name="msg_preferences">प्रेफरेंसेस</string>
   <string name="pref_changelog">चैंजलॉग</string>
   <string name="msg_editor_font_size">कृपया एडिटर का डिफ़ॉल्ट फ़ॉन्ट साइज चुनें :</string>
-  <string name="msg_clear_cache">यह ग्रेडल द्वारा बनाई गई कैश डायरेक्टरी को हटा देगा। यदि आप इसे हटाते हैं, तो अगली बिल्ड में सामान्य से थोड़ा अधिक समय लग सकता है क्योंकि ग्रेडल आवश्यक फ़ाइलों को फिर से डाउनलोड करेगा।\nमहत्वपूर्ण: यह AAPT2 को भी हटा देगा। आपको इसे पुनः इंस्टॉल करने की आवश्यकता होगी अन्यथा अगला निर्माण विफल होने की संभावना है।।\n\nक्या आप सुनिश्चित हैं कि आप कैश हटाना चाहते हैं?</string>
+  <string name="msg_clear_cache">This will delete caches directory created by Gradle. If you delete it, the next build may take a bit longer than normal as Gradle will download required files again.\n\nAre you sure you want to delete caches?</string>
   <!-- Error Messages used while Logging -->
   <string name="err_init_sdkinfo">SDK जानकारी प्रारंभ करने में असमर्थ</string>
   <string name="err_cannot_preview_layout">लेआउट का प्रिव्यू करने में असमर्थ</string>
@@ -452,9 +449,9 @@
   <string name="idepref_general_materialYou_summary">अपने डिवाइस के करीब एक अनुभव का आनंद लें (पुनः आरंभ करने की आवश्यकता है)।</string>
   <string name="idepref_general_projectConfig">प्रोजेक्ट कॉन्फ़िगरेशन</string>
   <string name="msg_app_launch_failed">एप्लिकेशन लॉन्च करने में विफल। अधिक जानकारी के लिए IDE लॉग देखें।</string>
-  <string name="idepref_java_diagnosticEnabled_title">Diagnostics enabled</string>
-  <string name="idepref_java_diagnosticsEnabled_summary">(EXPERIMENTAL) Whether the Java source files should be analyzed for errors or not.</string>
-  <string name="title_reload_color_schemes">Reload color schemes</string>
-  <string name="msg_dir_picker_failed">Failed to start directory picker : %1$s</string>
-  <string name="msg_tooling_server_unavailable">Tooling API server is unavailable. Check build output and IDE logs for errors.</string>
+  <string name="idepref_java_diagnosticEnabled_title">Java सोर्स कोड विश्लेषण सक्षम करें</string>
+  <string name="idepref_java_diagnosticsEnabled_summary">(प्रायोगिक) जावा स्रोत फ़ाइलों का गलतियों के लिए विश्लेषण किया जाना चाहिए या नहीं।</string>
+  <string name="title_reload_color_schemes">कलर स्कीम्स को पुनः लोड करें</string>
+  <string name="msg_dir_picker_failed">डायरेक्टरी पिकर प्रारंभ करने में विफल : %1$s</string>
+  <string name="msg_tooling_server_unavailable">टूलिंग एपीआई सर्वर अनुपलब्ध है। एरर के लिए बिल्ड आउटपुट और IDE लॉग जांचें।</string>
 </resources>
