--- a/resources/src/main/res/values/strings.xml
+++ b/resources/src/main/res/values/strings.xml
@@ -169,6 +169,7 @@
   <string name="action_closeOthers">Close others</string>
   <string name="action_closeThis">Close this</string>
   <string name="all_saved">All files saved!</string>
+  <string name="save_failed">Failed to save files</string>
   <string name="msg_newfile_dest">Destination: %s/</string>
   <string name="restype_drawable">Drawable</string>
   <string name="restype_layout">Layout</string>
@@ -539,4 +540,7 @@
   <string name="idepref_deleteEmptyLines_summary">Whether the editor should delete empty lines on a single backspace key event.</string>
   <string name="idepref_deleteTabs_title">Delete tab on backspace</string>
   <string name="idepref_deleteTabs_summary">When enabled, the editor will delete spaces equal to the tab width when the backspace key is pressed.</string>
+
+  <string name="btn_sync">Sync</string>
+  <string name="btn_ignore_changes">Ignore these changes</string>
 </resources>
